# pino-locoman

./: .gitignore  README.md  centroidal_dynamics.py  dynamics_centroidal.py  dynamics_rnea.py  example_casadi.py  example_com.py  example_dynamics.py  example_dynamics_nlp.py  example_dynamics_opti.py  example_ik.py  example_mpc.py  example_mpc_rnea.py  example_ocp.py  example_ocp_rnea.py  helpers.py  load.py  ocp_args.py  ocp_centroidal.py  ocp_rnea.py  optimal_control_problem.py  run_mpc.py  run_mpc_centroidal.py  run_mpc_rnea.py  run_ocp.py  run_ocp_centroidal.py  run_ocp_rnea.py
b2_description/srdf/: b2.srdf
b2_description/urdf/: b2.urdf
b2g_description/srdf/: b2g.srdf
b2g_description/urdf/: b2g.urdf
codegen/: CMakeLists.txt  README.md
dynamics/: __init__.py  dynamics.py  dynamics_centroidal.py  dynamics_centroidal_acc.py  dynamics_centroidal_vel.py  dynamics_rnea.py  dynamics_whole_body_acc.py  dynamics_whole_body_torque.py
examples_old/: README.md  example_casadi.py  example_ik.py
go2_description/urdf/: go2.urdf
optimal_control_problem/: __init__.py  ocp.py  ocp_centroidal.py  ocp_centroidal_acc.py  ocp_centroidal_vel.py  ocp_rnea.py
optimization/: __init__.py  ocp.py  ocp_centroidal_acc.py  ocp_centroidal_vel.py  ocp_factory.py  ocp_rnea.py  ocp_whole_body_aba.py  ocp_whole_body_acc.py  ocp_whole_body_rnea.py
robots/b2_description/meshes/: base_link_no_lidar.mtl
robots/b2_description/urdf/: b2.urdf
robots/b2g_description/srdf/: b2g.srdf
robots/b2g_description/urdf/: b2g.urdf
utils/: debug_fatrop.py  gait_sequence.py  helpers.py  robot.py
(+2 files in other folders)
